[workspace]
members = [
    "contracts",
    "lang",
]

exclude = [
    "examples",
    "example_project_structure",
    "mock"
]

[package]
name = "openbrush"
version = "1.8.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

license = "MIT"
readme = "README.md"
repository = "https://github.com/Supercolony-net/openbrush-contracts"
documentation = "https://docs.openbrush.io"
homepage = "https://supercolony.net"
description = "OpenBrush library for smart contract development on ink!."
keywords = ["wasm", "supercolony", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink_primitives = { version = "~3.2.0", default-features = false }
ink_metadata = { version = "~3.2.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.2.0", default-features = false }
ink_storage = { version = "~3.2.0", default-features = false }
ink_lang = { version = "~3.2.0", default-features = false }
ink_prelude = { version = "~3.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush_contracts = { version = "~1.8.0", path = "contracts", default-features = false }
openbrush_lang = { version = "~1.8.0", path = "lang", default-features = false }

[lib]
name = "openbrush"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "openbrush_contracts/std",
    "openbrush_lang/std",
]
psp22 = ["contracts/psp22"]
psp34 = ["contracts/psp34"]
psp35 = ["contracts/psp35"]
ownable = ["contracts/ownable"]
access_control = ["contracts/access_control"]
payment_splitter = ["contracts/payment_splitter"]
reentrancy_guard = ["contracts/reentrancy_guard"]
pausable = ["contracts/pausable"]
timelock_controller = ["contracts/timelock_controller"]
proxy = ["contracts/proxy"]
diamond = ["contracts/diamond"]

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
lto = true
overflow-checks = false