[package]
name = "brush_lang"
version = "1.8.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

[dependencies]
brush_lang_macro = { version = "1.8.0", path = "macro", default-features = false }

ink_env = { version = "3.2.0", default-features = false }
ink_lang = { version = "3.2.0", default-features = false }
ink_primitives = { version = "3.2.0", default-features = false }
ink_storage = { version = "3.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "brush_lang"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "brush_lang_macro/std",
    "ink_env/std",
    "ink_lang/std",
    "ink_primitives/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std",
]