[package]
name = "lending_project"
version = "2.4.0"
authors = ["Supercolony <green.baneling@supercolony.net, dominik.krizo@supercolony.net>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "..", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }

[lib]
name = "lending_project"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "openbrush/std",
]

[profile.dev]
codegen-units = 16
