[package]
name = "lending_project"
version = "3.0.0-beta"
authors = ["Brushfam <green@727.ventures, dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", commit = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "..", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }

[lib]
name = "lending_project"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]

[profile.dev]
codegen-units = 16
