[package]
name = "openbrush_lang"
version = "3.0.0-beta"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/Supercolony-net/openbrush-contracts"
documentation = "https://docs.openbrush.io"
homepage = "https://supercolony.net"
description = "Aggregator of all openbrush functionality and utils."
keywords = ["wasm", "supercolony", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
openbrush_lang_macro = { version = "~3.0.0-beta", path = "macro", default-features = false }

ink = { git = "https://github.com/paritytech/ink", commit = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

xxhash-rust = { version = "0.8", features = ["const_xxh32"] }
const_format = "0.2.21"

[lib]
name = "openbrush_lang"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "openbrush_lang_macro/std",
    "ink/std",
    "scale/std",
    "scale-info/std",
]