[package]
name = "brush_lang_codegen"
version = "1.8.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

[dependencies]
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1.0.64"
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.13.1"
unwrap = "1.2.1"
blake2 = "0.9"
heck = "0.3.1"
ink_lang_ir = { version = "3.2.0", default-features = false }
synstructure = "0.12"

[lib]
name = "brush_lang_codegen"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = []