[package]
name = "brush"
version = "0.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
proc_macros = { path = "proc_macros" }

[lib]
name = "brush"
path = "lib.rs"
crate-type = [
	"rlib",
]

[features]
default = ["std"]
std = [
	"ink_env/std",
	"ink_lang/std",
]