[package]
name = "derive"
version = "1.8.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"
brush_lang = { path = "../../brush_lang" }

[lib]
name = "derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []
psp22 = []
psp34 = []
psp1155 = []
access_control = []
ownable = []
payment_splitter = []
reentrancy_guard = []
pausable = []
timelock_controller = []
proxy = []
diamond = []