[package]
name = "openbrush_contracts_derive"
version = "2.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/Supercolony-net/openbrush-contracts"
documentation = "https://docs.openbrush.io"
homepage = "https://supercolony.net"
description = "Derives for storage data of each contract in the openbrush."
keywords = ["wasm", "supercolony", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "lib.rs"]

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"
openbrush = { package = "openbrush_lang", version = "~2.1.0", path = "../../lang" }

[lib]
name = "openbrush_contracts_derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []
psp22 = []
psp34 = []
psp35 = []
access_control = []
ownable = []
payment_splitter = []
reentrancy_guard = []
pausable = []
timelock_controller = []
proxy = []
diamond = []