[package]
name = "utils"
version = "0.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }

[lib]
name = "utils"
path = "lib.rs"
crate-type = [
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
	"ink_env/std",
	"ink_lang/std",
]