[package]
name = "lending_project_derive"
version = "1.6.0"
authors = ["Supercolony <dominik.krizo@supercolony.net>"]
edition = "2021"

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"

# In you code you can import `brush_derive` with the next line
#brush_derive = { tag = "v1.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false }

brush_derive = { path = "../../utils/brush_derive" }

[lib]
name = "lending_project_derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []