[package]
name = "lending_project_derive"
version = "1.8.0"
authors = ["Supercolony <dominik.krizo@supercolony.net>"]
edition = "2021"

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"

# In you code you can import `brush_derive` with the next line
#brush = { version = "1.8.0", default-features = false }

brush = { package = "brush_lang", path = "../../brush_lang" }

[lib]
name = "lending_project_derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []