[package]
name = "lending_project_derive"
version = "2.1.0"
authors = ["Supercolony <dominik.krizo@supercolony.net>"]
edition = "2021"

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
proc-macro2 = "1"

# In you code you can import `openbrush_derive` with the next line
#openbrush = { version = "~2.1.0", default-features = false }

openbrush = { package = "openbrush_lang", path = "../../lang" }

[lib]
name = "lending_project_derive"
path = "lib.rs"
proc-macro = true

[features]
default = ["std"]
std = []