[package]
name = "my_access_control"
version = "1.0.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc6", default-features = false }
ink_metadata = { version = "3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc6", default-features = false }
ink_storage = { version = "3.0.0-rc6", default-features = false }
ink_lang = { version = "3.0.0-rc6", default-features = false }
ink_prelude = { version = "3.0.0-rc6", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

# These dependencies
psp721 = { path = "../../contracts/token/psp721", default-features = false }
access-control = { path = "../../contracts/access/access-control", default-features = false }
brush = { path = "../../utils/brush", default-features = false }

[lib]
name = "my_access_control"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "psp721/std",
    "access-control/std",
    "brush/std",
]
ink-as-dependency = []
