[package]
name = "my_crypto"
version = "0.3.0-rc1"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_metadata = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_storage = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_prelude = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

brush = { path = "../../utils/brush", default-features = false }

[lib]
name = "my_crypto"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "brush/std",
]
ink-as-dependency = []
