[package]
name = "my_erc20"
version = "0.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_metadata = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_storage = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }
ink_prelude = { git = "https://github.com/Supercolony-net/ink", branch = "3.0-rc4", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

erc20 = { path = "../../contracts/token/erc20", default-features = false, features = ["ink-as-dependency"] }
utils = { path = "../../contracts/utils", default-features = false }

[lib]
name = "my_erc20"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",

    "scale/std",
    "scale-info",
    "scale-info/std",

    "erc20/std",
    "utils/std",
]
ink-as-dependency = []
